@@ -4,6 +4,8 @@
 
 Version 1.4.17 - SVN
 --------------------
+  - Allow control over white space wrapping of auto-generated
+    SquirrelMail option widgets.
 
 Version 1.4.16 - 28 September 2008
 ----------------------------------
